Optimize imports (#1263)