@@ -3,41 +3,42 @@ package no.nav.vedtak.sikkerhet.pdp.xacml;
 import java.util.Collection;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 public final class XacmlResponseMapper {
+
+    private XacmlResponseMapper() {
+    }
 
     private static final String POLICY_IDENTIFIER = "no.nav.abac.attributter.adviceorobligation.deny_policy";
     private static final String DENY_ADVICE_IDENTIFIER = "no.nav.abac.advices.reason.deny_reason";
 
     public static List<XacmlResponse.ObligationOrAdvice> getObligations(XacmlResponse response) {
         return Optional.ofNullable(response)
-            .map(XacmlResponse::response).orElse(List.of()).stream()
+            .map(XacmlResponse::response)
+            .orElse(List.of())
+            .stream()
             .map(r -> Optional.ofNullable(r.obligations()).orElse(List.of()))
             .flatMap(Collection::stream)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public static List<Advice> getAdvice(XacmlResponse response) {
         return Optional.ofNullable(response)
-            .map(XacmlResponse::response).orElse(List.of()).stream()
+            .map(XacmlResponse::response)
+            .orElse(List.of())
+            .stream()
             .map(r -> Optional.ofNullable(r.associatedAdvice()).orElse(List.of()))
             .flatMap(Collection::stream)
             .map(XacmlResponseMapper::getAdviceFrom)
             .flatMap(Collection::stream)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private static List<Advice> getAdviceFrom(XacmlResponse.ObligationOrAdvice advice) {
         if (!DENY_ADVICE_IDENTIFIER.equals(advice.id())) {
             return List.of();
         }
-        var denials = advice.attributeAssignment().stream()
-            .map(a -> getAdvicefromObject(a))
-            .flatMap(Optional::stream)
-            .collect(Collectors.toList());
-
-        return denials;
+        return advice.attributeAssignment().stream().map(XacmlResponseMapper::getAdvicefromObject).flatMap(Optional::stream).toList();
     }
 
     private static Optional<Advice> getAdvicefromObject(XacmlResponse.AttributeAssignment attribute) {
@@ -56,8 +57,6 @@ public final class XacmlResponseMapper {
     }
 
     public static List<Decision> getDecisions(XacmlResponse response) {
-        return response.response().stream()
-            .map(XacmlResponse.Result::decision)
-            .collect(Collectors.toList());
+        return response.response().stream().map(XacmlResponse.Result::decision).toList();
     }
 }
